# python-project-lvl3

./: .travis.yml  Makefile  README.md  pyproject.toml
page_loader/: loader.py  scraper.py  url.py
page_loader/scripts/: page_loader.py
tests/: conftest.py  test_loader.py  test_url.py
tests/fixtures/: page_with_links.html
